MapR [SPARK-1188] [Java 17] Need to open java.lang module for Spark HS, Spark Master and Spark Workers (#1093)
Co-authored-by: Egor Krivokon <>